version/0.4/_sources/api/ansys/geometry/core/plotting/widgets/show_design_point/ShowDesignPoints.rst.txt




ShowDesignPoints
================

.. py:class:: ShowDesignPoints(plotter_helper: PlotterHelper)
   :canonical: ansys.geometry.core.plotting.widgets.show_design_point.ShowDesignPoints



Bases: :py:obj:`ansys.geometry.core.plotting.widgets.widget.PlotterWidget`


   Provides the a button to hide/show DesignPoint objects in the plotter.


   :Parameters:

       **plotter_helper** : :obj:`PlotterHelper`
           Provides the plotter to add the button to.














   ..
       !! processed by numpydoc !!














Overview
--------
.. py:currentmodule:: ShowDesignPoints
.. tab-set::



    .. tab-item:: Methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~callback`
            - Remove or add the DesignPoint actors upon click.
          * - :py:attr:`~update`
            - Define the configuration and representation of the button widget button.







Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.plotting.widgets.show_design_point import ShowDesignPoints




Method detail
-------------
.. py:method:: callback(state: bool) -> None

   
   Remove or add the DesignPoint actors upon click.


   :Parameters:

       **state** : :ref:`bool <python:bltin-boolean-values>`
           State of the button, which is inherited from PyVista. The value is ``True``
           if the button is active.














   ..
       !! processed by numpydoc !!

.. py:method:: update() -> None

   
   Define the configuration and representation of the button widget button.
















   ..
       !! processed by numpydoc !!


